selftests/xsk: xsk selftests - SKB POLL, NOPOLL
Adds following tests:

2. AF_XDP SKB mode
   Generic mode XDP that is driver independent, used when the driver does
   not have support for XDP. Works on any netdevice using sockets and
   generic XDP path. XDP hook from netif_receive_skb().
   a. nopoll - soft-irq processing
   b. poll - busy-pollng, using poll() syscall
      No longer waiting for device interrupts being generated/handled.
      Polling driver/device queues.
      For explanation on poll and no-poll refer to this RFC:
      https://patchwork.ozlabs.org/cover/1094083/

Only copy-mode is supported.

Total tests: 3.

Signed-off-by: Weqaar Janjua <weqaar.a.janjua@intel.com>

--- a/tools/testing/selftests/xsk/Makefile
+++ b/tools/testing/selftests/xsk/Makefile
@@ -7,15 +7,30 @@ ifeq ($(VAR_LDLIBS),)
 VAR_LDLIBS :=
 endif
 
+CFLAGS += -O2 -g -std=gnu99 -Wall -I../../../../usr/include/ $(VAR_CFLAGS)
+LDLIBS += $(VAR_LDLIBS)
+
+XSKDIR := $(realpath ./xdpprogs)
+XSKOBJ := xdpxceiver
+
 TEST_PROGS := TEST_PREREQUISITES.sh \
-              TEST_XSK.sh
+              TEST_XSK_SKB_NOPOLL.sh \
+			  TEST_XSK_SKB_POLL.sh
 TEST_FILES := prereqs.sh
 TEST_TRANSIENT_FILES := veth.spec
-TEST_PROGS_EXTENDED :=
+TEST_PROGS_EXTENDED := $(XSKDIR)/$(XSKOBJ)
+
+all: $(TEST_PROGS_EXTENDED)
 
 KSFT_KHDR_INSTALL := 1
 include ../lib.mk
 
+$(TEST_PROGS_EXTENDED): $(XSKDIR)/$(XSKOBJ)
+
+$(XSKDIR)/$(XSKOBJ):
+	cd $(XSKDIR) && $(MAKE)
+
 override define CLEAN
 	$(RM) $(TEST_TRANSIENT_FILES)
+	cd $(XSKDIR) && $(MAKE) clean
 endef
