selftests/xsk: xsk selftests - DRV POLL, NOPOLL
Adds following tests:

3. AF_XDP DRV/Native mode
   Works on any netdevice with XDP support, driver dependent. Processes
   packets before SKB allocation. Provides better performance than SKB.
   Driver hook available just after DMA of buffer descriptor.
   a. nopoll
   b. poll

Only copy-mode is supported.

Total tests: 5.

Signed-off-by: Weqaar Janjua <weqaar.a.janjua@intel.com>

--- a/tools/testing/selftests/xsk/Makefile
+++ b/tools/testing/selftests/xsk/Makefile
@@ -14,8 +14,10 @@ XSKDIR := $(realpath ./xdpprogs)
 XSKOBJ := xdpxceiver
 
 TEST_PROGS := TEST_PREREQUISITES.sh \
-              TEST_XSK_SKB_NOPOLL.sh \
-			  TEST_XSK_SKB_POLL.sh
+	          TEST_XSK_SKB_NOPOLL.sh \
+			  TEST_XSK_SKB_POLL.sh \
+			  TEST_XSK_DRV_NOPOLL.sh \
+			  TEST_XSK_DRV_POLL.sh
 TEST_FILES := prereqs.sh
 TEST_TRANSIENT_FILES := veth.spec
 TEST_PROGS_EXTENDED := $(XSKDIR)/$(XSKOBJ)
